Bug solving: now shadowjar is working